fixed soon to be deprecated reset stylesheet

--- a/client/public/theme.css
+++ b/client/public/theme.css
@@ -1,3 +1,22 @@
+// reset
+html {
+  scrollbar-gutter: stable;
+}
+.dark {
+  color-scheme: dark;
+}
+.dark ::-moz-selection  {
+  background: #444;
+}
+.dark ::selection {
+  background: #444;
+}
+div {
+  display: flex;
+  flex-direction: column;
+}
+
+// primevue additions
 .p-input-icon-left > i,
 .p-input-icon-right > i {
   margin-top: -12px;
