--- a/client/public/theme.css
+++ b/client/public/theme.css
@@ -2,30 +2,33 @@
 html {
   scrollbar-gutter: stable;
 }
+
 .dark {
   color-scheme: dark;
-}
-.dark ::-moz-selection  {
-  background: #444;
-}
-.dark ::selection {
-  background: #444;
-}
-div {
-  display: flex;
-  flex-direction: column;
 }
 
 /* primevue additions */
 .p-input-icon-left > i,
 .p-input-icon-right > i {
-  margin-top: -12px!important;
+  margin-top: -12px !important;
 }
 
 .p-input-icon-left > .p-inputtext {
-    padding-left: calc(1.25rem + 24px);
+  padding-left: calc(1.25rem + 24px);
 }
 
 .p-input-icon-right > .p-inputtext {
-    padding-right: calc(1.25rem + 24px);
+  padding-right: calc(1.25rem + 24px);
+}
+
+.p-toast .p-toast-message .p-toast-message-content {
+  border-width: 0!important;
+}
+
+.p-toast .p-toast-message {
+  border: 0 none!important;
+}
+
+.p-toast-message-icon {
+  height: 1em!important;
 }
