Force PrimeVue text color everywhere in the body

--- a/client/public/theme.css
+++ b/client/public/theme.css
@@ -17,6 +17,10 @@ div {
 }
 
 /* primevue additions */
+body {
+  color: var(--text-color);
+}
+
 .p-input-icon-left > i,
 .p-input-icon-right > i {
   margin-top: -12px!important;
