--- a/client/public/theme.css
+++ b/client/public/theme.css
@@ -13,8 +13,14 @@ html {
 }
 
 /* primevue additions */
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;600;700&display=swap');
+
 body {
   color: var(--text-color);
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Red Hat Display', sans-serif;
 }
 
 .p-input-icon-left > i,
