Dark theme + rework debug layout

--- a/client/public/assets/css/dark-theme.css
+++ b/client/public/assets/css/dark-theme.css
@@ -35,6 +35,7 @@
   --inline-spacing: 0.5rem;
   --border-radius: 8px;
   --surface-ground: #1d1e27;
+  --ground: #121212;
   --surface-section: #1d1e27;
   --surface-card: #1c1d26;
   --surface-overlay: #1c1d26;
@@ -48,6 +49,10 @@
 }
 * {
   box-sizing: border-box;
+}
+.ground {
+  background-color: var(--ground);
+  color: var(--text-color);
 }
 .p-component {
   font-family: "Red Hat Text", sans-serif;
@@ -1856,342 +1861,342 @@
 .p-button.p-button-info,
 .p-buttonset.p-button-info > .p-button,
 .p-splitbutton.p-button-info > .p-button {
-  color: #1d1e27;
-  background: #9bcaff;
-  border: 1px solid #9bcaff;
+  color: #fff;
+  background: #5486f3;
+  border: 1px solid #5486f3;
 }
 .p-button.p-button-info:enabled:hover,
 .p-buttonset.p-button-info > .p-button:enabled:hover,
 .p-splitbutton.p-button-info > .p-button:enabled:hover {
-  background: #72b4ff;
-  color: #1d1e27;
-  border-color: #72b4ff;
+  background: #3570f1;
+  color: #fff;
+  border-color: #3570f1;
 }
 .p-button.p-button-info:enabled:focus,
 .p-buttonset.p-button-info > .p-button:enabled:focus,
 .p-splitbutton.p-button-info > .p-button:enabled:focus {
-  box-shadow: 0 0 0 1px #b9daff;
+  box-shadow: 0 0 0 0.2rem #bbcffa;
 }
 .p-button.p-button-info:enabled:active,
 .p-buttonset.p-button-info > .p-button:enabled:active,
 .p-splitbutton.p-button-info > .p-button:enabled:active {
-  background: #499fff;
-  color: #1d1e27;
-  border-color: #499fff;
+  background: #175bef;
+  color: #fff;
+  border-color: #175bef;
 }
 .p-button.p-button-info.p-button-outlined,
 .p-buttonset.p-button-info > .p-button.p-button-outlined,
 .p-splitbutton.p-button-info > .p-button.p-button-outlined {
   background-color: transparent;
-  color: #9bcaff;
+  color: #5486f3;
   border: 1px solid;
 }
 .p-button.p-button-info.p-button-outlined:enabled:hover,
 .p-buttonset.p-button-info > .p-button.p-button-outlined:enabled:hover,
 .p-splitbutton.p-button-info > .p-button.p-button-outlined:enabled:hover {
-  background: rgba(155, 202, 255, 0.04);
-  color: #9bcaff;
+  background: rgba(84, 134, 243, 0.04);
+  color: #5486f3;
   border: 1px solid;
 }
 .p-button.p-button-info.p-button-outlined:enabled:active,
 .p-buttonset.p-button-info > .p-button.p-button-outlined:enabled:active,
 .p-splitbutton.p-button-info > .p-button.p-button-outlined:enabled:active {
-  background: rgba(155, 202, 255, 0.16);
-  color: #9bcaff;
+  background: rgba(84, 134, 243, 0.16);
+  color: #5486f3;
   border: 1px solid;
 }
 .p-button.p-button-info.p-button-text,
 .p-buttonset.p-button-info > .p-button.p-button-text,
 .p-splitbutton.p-button-info > .p-button.p-button-text {
   background-color: transparent;
-  color: #9bcaff;
+  color: #5486f3;
   border-color: transparent;
 }
 .p-button.p-button-info.p-button-text:enabled:hover,
 .p-buttonset.p-button-info > .p-button.p-button-text:enabled:hover,
 .p-splitbutton.p-button-info > .p-button.p-button-text:enabled:hover {
-  background: rgba(155, 202, 255, 0.04);
+  background: rgba(84, 134, 243, 0.04);
   border-color: transparent;
-  color: #9bcaff;
+  color: #5486f3;
 }
 .p-button.p-button-info.p-button-text:enabled:active,
 .p-buttonset.p-button-info > .p-button.p-button-text:enabled:active,
 .p-splitbutton.p-button-info > .p-button.p-button-text:enabled:active {
-  background: rgba(155, 202, 255, 0.16);
+  background: rgba(84, 134, 243, 0.16);
   border-color: transparent;
-  color: #9bcaff;
+  color: #5486f3;
 }
 .p-button.p-button-success,
 .p-buttonset.p-button-success > .p-button,
 .p-splitbutton.p-button-success > .p-button {
-  color: #1d1e27;
-  background: #93deac;
-  border: 1px solid #93deac;
+  color: #fff;
+  background: var(--green-500);
+  border: 1px solid var(--green-500);
 }
 .p-button.p-button-success:enabled:hover,
 .p-buttonset.p-button-success > .p-button:enabled:hover,
 .p-splitbutton.p-button-success > .p-button:enabled:hover {
-  background: #77d596;
-  color: #1d1e27;
-  border-color: #77d596;
+  background: #25b364;
+  color: #fff;
+  border-color: #25b364;
 }
 .p-button.p-button-success:enabled:focus,
 .p-buttonset.p-button-success > .p-button:enabled:focus,
 .p-splitbutton.p-button-success > .p-button:enabled:focus {
-  box-shadow: 0 0 0 1px #b3e8c5;
+  box-shadow: 0 0 0 0.2rem #a5edc5;
 }
 .p-button.p-button-success:enabled:active,
 .p-buttonset.p-button-success > .p-button:enabled:active,
 .p-splitbutton.p-button-success > .p-button:enabled:active {
-  background: #5acd81;
-  color: #1d1e27;
-  border-color: #5acd81;
+  background: #219f59;
+  color: #fff;
+  border-color: #219f59;
 }
 .p-button.p-button-success.p-button-outlined,
 .p-buttonset.p-button-success > .p-button.p-button-outlined,
 .p-splitbutton.p-button-success > .p-button.p-button-outlined {
   background-color: transparent;
-  color: #93deac;
+  color: var(--green-500);
   border: 1px solid;
 }
 .p-button.p-button-success.p-button-outlined:enabled:hover,
 .p-buttonset.p-button-success > .p-button.p-button-outlined:enabled:hover,
 .p-splitbutton.p-button-success > .p-button.p-button-outlined:enabled:hover {
-  background: rgba(147, 222, 172, 0.04);
-  color: #93deac;
+  background: rgba(41, 199, 111, 0.04);
+  color: var(--green-500);
   border: 1px solid;
 }
 .p-button.p-button-success.p-button-outlined:enabled:active,
 .p-buttonset.p-button-success > .p-button.p-button-outlined:enabled:active,
 .p-splitbutton.p-button-success > .p-button.p-button-outlined:enabled:active {
-  background: rgba(147, 222, 172, 0.16);
-  color: #93deac;
+  background: rgba(41, 199, 111, 0.16);
+  color: var(--green-500);
   border: 1px solid;
 }
 .p-button.p-button-success.p-button-text,
 .p-buttonset.p-button-success > .p-button.p-button-text,
 .p-splitbutton.p-button-success > .p-button.p-button-text {
   background-color: transparent;
-  color: #93deac;
+  color: var(--green-500);
   border-color: transparent;
 }
 .p-button.p-button-success.p-button-text:enabled:hover,
 .p-buttonset.p-button-success > .p-button.p-button-text:enabled:hover,
 .p-splitbutton.p-button-success > .p-button.p-button-text:enabled:hover {
-  background: rgba(147, 222, 172, 0.04);
+  background: rgba(41, 199, 111, 0.04);
   border-color: transparent;
-  color: #93deac;
+  color: var(--green-500);
 }
 .p-button.p-button-success.p-button-text:enabled:active,
 .p-buttonset.p-button-success > .p-button.p-button-text:enabled:active,
 .p-splitbutton.p-button-success > .p-button.p-button-text:enabled:active {
-  background: rgba(147, 222, 172, 0.16);
+  background: rgba(41, 199, 111, 0.16);
   border-color: transparent;
-  color: #93deac;
+  color: var(--green-500);
 }
 .p-button.p-button-warning,
 .p-buttonset.p-button-warning > .p-button,
 .p-splitbutton.p-button-warning > .p-button {
-  color: #1d1e27;
-  background: #ffcf91;
-  border: 1px solid #ffcf91;
+  color: #212529;
+  background: var(--orange-500);
+  border: 1px solid var(--orange-500);
 }
 .p-button.p-button-warning:enabled:hover,
 .p-buttonset.p-button-warning > .p-button:enabled:hover,
 .p-splitbutton.p-button-warning > .p-button:enabled:hover {
-  background: #ffbe69;
-  color: #1d1e27;
-  border-color: #ffbe69;
+  background: #ff8f22;
+  color: #212529;
+  border-color: #ff8f22;
 }
 .p-button.p-button-warning:enabled:focus,
 .p-buttonset.p-button-warning > .p-button:enabled:focus,
 .p-splitbutton.p-button-warning > .p-button:enabled:focus {
-  box-shadow: 0 0 0 1px #ffddb2;
+  box-shadow: 0 0 0 0.2rem #ffd9b3;
 }
 .p-button.p-button-warning:enabled:active,
 .p-buttonset.p-button-warning > .p-button:enabled:active,
 .p-splitbutton.p-button-warning > .p-button:enabled:active {
-  background: #ffac41;
-  color: #1d1e27;
-  border-color: #ffac41;
+  background: #ff7e02;
+  color: #212529;
+  border-color: #ff7e02;
 }
 .p-button.p-button-warning.p-button-outlined,
 .p-buttonset.p-button-warning > .p-button.p-button-outlined,
 .p-splitbutton.p-button-warning > .p-button.p-button-outlined {
   background-color: transparent;
-  color: #ffcf91;
+  color: var(--orange-500);
   border: 1px solid;
 }
 .p-button.p-button-warning.p-button-outlined:enabled:hover,
 .p-buttonset.p-button-warning > .p-button.p-button-outlined:enabled:hover,
 .p-splitbutton.p-button-warning > .p-button.p-button-outlined:enabled:hover {
-  background: rgba(255, 207, 145, 0.04);
-  color: #ffcf91;
+  background: rgba(255, 159, 66, 0.04);
+  color: var(--orange-500);
   border: 1px solid;
 }
 .p-button.p-button-warning.p-button-outlined:enabled:active,
 .p-buttonset.p-button-warning > .p-button.p-button-outlined:enabled:active,
 .p-splitbutton.p-button-warning > .p-button.p-button-outlined:enabled:active {
-  background: rgba(255, 207, 145, 0.16);
-  color: #ffcf91;
+  background: rgba(255, 159, 66, 0.16);
+  color: var(--orange-500);
   border: 1px solid;
 }
 .p-button.p-button-warning.p-button-text,
 .p-buttonset.p-button-warning > .p-button.p-button-text,
 .p-splitbutton.p-button-warning > .p-button.p-button-text {
   background-color: transparent;
-  color: #ffcf91;
+  color: var(--orange-500);
   border-color: transparent;
 }
 .p-button.p-button-warning.p-button-text:enabled:hover,
 .p-buttonset.p-button-warning > .p-button.p-button-text:enabled:hover,
 .p-splitbutton.p-button-warning > .p-button.p-button-text:enabled:hover {
-  background: rgba(255, 207, 145, 0.04);
+  background: rgba(255, 159, 66, 0.04);
   border-color: transparent;
-  color: #ffcf91;
+  color: var(--orange-500);
 }
 .p-button.p-button-warning.p-button-text:enabled:active,
 .p-buttonset.p-button-warning > .p-button.p-button-text:enabled:active,
 .p-splitbutton.p-button-warning > .p-button.p-button-text:enabled:active {
-  background: rgba(255, 207, 145, 0.16);
+  background: rgba(255, 159, 66, 0.16);
   border-color: transparent;
-  color: #ffcf91;
+  color: var(--orange-500);
 }
 .p-button.p-button-help,
 .p-buttonset.p-button-help > .p-button,
 .p-splitbutton.p-button-help > .p-button {
-  color: #1d1e27;
-  background: #86e0e7;
-  border: 1px solid #86e0e7;
+  color: #fff;
+  background: #3ec9d6;
+  border: 1px solid #3ec9d6;
 }
 .p-button.p-button-help:enabled:hover,
 .p-buttonset.p-button-help > .p-button:enabled:hover,
 .p-splitbutton.p-button-help > .p-button:enabled:hover {
-  background: #68d8e1;
-  color: #1d1e27;
-  border-color: #68d8e1;
+  background: #2cbfcd;
+  color: #fff;
+  border-color: #2cbfcd;
 }
 .p-button.p-button-help:enabled:focus,
 .p-buttonset.p-button-help > .p-button:enabled:focus,
 .p-splitbutton.p-button-help > .p-button:enabled:focus {
-  box-shadow: 0 0 0 1px #aae9ee;
+  box-shadow: 0 0 0 0.2rem #b2e9ef;
 }
 .p-button.p-button-help:enabled:active,
 .p-buttonset.p-button-help > .p-button:enabled:active,
 .p-splitbutton.p-button-help > .p-button:enabled:active {
-  background: #49d0db;
-  color: #1d1e27;
-  border-color: #49d0db;
+  background: #27aab6;
+  color: #fff;
+  border-color: #27aab6;
 }
 .p-button.p-button-help.p-button-outlined,
 .p-buttonset.p-button-help > .p-button.p-button-outlined,
 .p-splitbutton.p-button-help > .p-button.p-button-outlined {
   background-color: transparent;
-  color: #86e0e7;
+  color: #3ec9d6;
   border: 1px solid;
 }
 .p-button.p-button-help.p-button-outlined:enabled:hover,
 .p-buttonset.p-button-help > .p-button.p-button-outlined:enabled:hover,
 .p-splitbutton.p-button-help > .p-button.p-button-outlined:enabled:hover {
-  background: rgba(134, 224, 231, 0.04);
-  color: #86e0e7;
+  background: rgba(62, 201, 214, 0.04);
+  color: #3ec9d6;
   border: 1px solid;
 }
 .p-button.p-button-help.p-button-outlined:enabled:active,
 .p-buttonset.p-button-help > .p-button.p-button-outlined:enabled:active,
 .p-splitbutton.p-button-help > .p-button.p-button-outlined:enabled:active {
-  background: rgba(134, 224, 231, 0.16);
-  color: #86e0e7;
+  background: rgba(62, 201, 214, 0.16);
+  color: #3ec9d6;
   border: 1px solid;
 }
 .p-button.p-button-help.p-button-text,
 .p-buttonset.p-button-help > .p-button.p-button-text,
 .p-splitbutton.p-button-help > .p-button.p-button-text {
   background-color: transparent;
-  color: #86e0e7;
+  color: #3ec9d6;
   border-color: transparent;
 }
 .p-button.p-button-help.p-button-text:enabled:hover,
 .p-buttonset.p-button-help > .p-button.p-button-text:enabled:hover,
 .p-splitbutton.p-button-help > .p-button.p-button-text:enabled:hover {
-  background: rgba(134, 224, 231, 0.04);
+  background: rgba(62, 201, 214, 0.04);
   border-color: transparent;
-  color: #86e0e7;
+  color: #3ec9d6;
 }
 .p-button.p-button-help.p-button-text:enabled:active,
 .p-buttonset.p-button-help > .p-button.p-button-text:enabled:active,
 .p-splitbutton.p-button-help > .p-button.p-button-text:enabled:active {
-  background: rgba(134, 224, 231, 0.16);
+  background: rgba(62, 201, 214, 0.16);
   border-color: transparent;
-  color: #86e0e7;
+  color: #3ec9d6;
 }
 .p-button.p-button-danger,
 .p-buttonset.p-button-danger > .p-button,
 .p-splitbutton.p-button-danger > .p-button {
-  color: #1d1e27;
-  background: #eb9a9c;
-  border: 1px solid #eb9a9c;
+  color: #fff;
+  background: var(--pink-500);
+  border: 1px solid var(--pink-500);
 }
 .p-button.p-button-danger:enabled:hover,
 .p-buttonset.p-button-danger > .p-button:enabled:hover,
 .p-splitbutton.p-button-danger > .p-button:enabled:hover {
-  background: #e57a7c;
-  color: #1d1e27;
-  border-color: #e57a7c;
+  background: #e73839;
+  color: #fff;
+  border-color: #e73839;
 }
 .p-button.p-button-danger:enabled:focus,
 .p-buttonset.p-button-danger > .p-button:enabled:focus,
 .p-splitbutton.p-button-danger > .p-button:enabled:focus {
-  box-shadow: 0 0 0 1px #f1b8ba;
+  box-shadow: 0 0 0 0.2rem #f7bbbb;
 }
 .p-button.p-button-danger:enabled:active,
 .p-buttonset.p-button-danger > .p-button:enabled:active,
 .p-splitbutton.p-button-danger > .p-button:enabled:active {
-  background: #de595c;
-  color: #1d1e27;
-  border-color: #de595c;
+  background: #e31c1d;
+  color: #fff;
+  border-color: #e31c1d;
 }
 .p-button.p-button-danger.p-button-outlined,
 .p-buttonset.p-button-danger > .p-button.p-button-outlined,
 .p-splitbutton.p-button-danger > .p-button.p-button-outlined {
   background-color: transparent;
-  color: #eb9a9c;
+  color: var(--pink-500);
   border: 1px solid;
 }
 .p-button.p-button-danger.p-button-outlined:enabled:hover,
 .p-buttonset.p-button-danger > .p-button.p-button-outlined:enabled:hover,
 .p-splitbutton.p-button-danger > .p-button.p-button-outlined:enabled:hover {
-  background: rgba(235, 154, 156, 0.04);
-  color: #eb9a9c;
+  background: rgba(234, 84, 85, 0.04);
+  color: var(--pink-500);
   border: 1px solid;
 }
 .p-button.p-button-danger.p-button-outlined:enabled:active,
 .p-buttonset.p-button-danger > .p-button.p-button-outlined:enabled:active,
 .p-splitbutton.p-button-danger > .p-button.p-button-outlined:enabled:active {
-  background: rgba(235, 154, 156, 0.16);
-  color: #eb9a9c;
+  background: rgba(234, 84, 85, 0.16);
+  color: var(--pink-500);
   border: 1px solid;
 }
 .p-button.p-button-danger.p-button-text,
 .p-buttonset.p-button-danger > .p-button.p-button-text,
 .p-splitbutton.p-button-danger > .p-button.p-button-text {
   background-color: transparent;
-  color: #eb9a9c;
+  color: var(--pink-500);
   border-color: transparent;
 }
 .p-button.p-button-danger.p-button-text:enabled:hover,
 .p-buttonset.p-button-danger > .p-button.p-button-text:enabled:hover,
 .p-splitbutton.p-button-danger > .p-button.p-button-text:enabled:hover {
-  background: rgba(235, 154, 156, 0.04);
+  background: rgba(234, 84, 85, 0.04);
   border-color: transparent;
-  color: #eb9a9c;
+  color: var(--pink-500);
 }
 .p-button.p-button-danger.p-button-text:enabled:active,
 .p-buttonset.p-button-danger > .p-button.p-button-text:enabled:active,
 .p-splitbutton.p-button-danger > .p-button.p-button-text:enabled:active {
-  background: rgba(235, 154, 156, 0.16);
+  background: rgba(234, 84, 85, 0.16);
   border-color: transparent;
-  color: #eb9a9c;
+  color: var(--pink-500);
 }
 .p-button.p-button-link {
   color: var(--primary-400);
@@ -3893,7 +3898,6 @@
 .p-card {
   background: #1c1d26;
   color: #e6e6e6;
-  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
   border-radius: 8px;
 }
 .p-card .p-card-body {
