--- a/client/public/assets/css/dark-theme.css
+++ b/client/public/assets/css/dark-theme.css
@@ -8,6 +8,7 @@
   --text-color: #e6e6e6;
   --text-color-secondary: #b3b3b3;
   --primary-color: var(--primary-500);
+  --primary-color-transparent: rgba(125, 104, 223, .125);
   --primary-color-text: var(--text-color);
   --font-family: Red Hat Text, sans-serif;
   --surface-0: #1d1e27;
