--- a/client/public/assets/css/dark-theme.css
+++ b/client/public/assets/css/dark-theme.css
@@ -52,6 +52,11 @@
   box-sizing: border-box;
 }
 
+hr {
+  border: 0;
+  border-top: 1px solid var(--surface-overlay);
+}
+
 .ground {
   background-color: var(--ground);
   color: var(--text-color);
