--- a/client/public/assets/css/dark-theme.css
+++ b/client/public/assets/css/dark-theme.css
@@ -854,6 +854,43 @@ hr {
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
+.h-radiocard {
+  background: var(--ground);
+  border: 2px solid var(--surface-d);
+  transition: background-color 0.2s, border-color 0.2s, box-shadow 0.2s;
+  border-radius: 8px;
+  padding: 1.25em;
+  cursor: pointer;
+}
+
+.h-radiocard * {
+  color: var(--text-color-secondary);
+  transition: color 0.2s;
+}
+
+.h-radiocard.checked {
+  border: 2px solid var(--primary-500);
+}
+
+.h-radiocard.checked * {
+  color: var(--text-color);
+}
+
+.h-radiocard:not(.p-disabled):hover {
+  border-color: var(--primary-500);
+}
+
+.h-radiocard:not(.p-disabled):hover .p-radiobutton .p-radiobutton-box:not(.p-disabled):not(.p-highlight) {
+  border-color: var(--primary-500);
+}
+
+.h-radiocard:not(.p-disabled).p-focus {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: 0 0 0 1px var(--primary-600);
+  border-color: var(--primary-500);
+}
+
 .p-dropdown {
   background: #1d1e27;
   border: 1px solid #2e303d;
