--- a/client/public/assets/css/light-theme.css
+++ b/client/public/assets/css/light-theme.css
@@ -891,6 +891,13 @@ hr {
   border-color: var(--primary-500);
 }
 
+.h-radiocard:not(.p-disabled).p-focus .p-radiobutton .p-radiobutton-box:not(.p-disabled) {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: var(--focus-ring);
+  border-color: var(--primary-500);
+}
+
 .p-dropdown {
   background: #fff;
   border: 1px solid #d3dbe3;
