--- a/client/public/assets/css/dark-theme.css
+++ b/client/public/assets/css/dark-theme.css
@@ -3187,7 +3187,7 @@ hr {
 }
 
 .p-datatable .p-paginator-bottom {
-  border-width: 1px 0 0 0;
+  border-width: 0;
   border-radius: 0;
   border-color: var(--surface-border);
 }
