--- a/client/public/assets/css/light-theme.css
+++ b/client/public/assets/css/light-theme.css
@@ -5092,7 +5092,7 @@ hr {
 .p-dialog .p-dialog-header {
   border-bottom: 0 none;
   background: #fff;
-  color: var(--text-color-secondary);
+  color: var(--text-color);
   padding: 1.5rem;
   border-top-right-radius: 8px;
   border-top-left-radius: 8px;
