Update theme and translations

--- a/client/public/assets/css/dark-theme.css
+++ b/client/public/assets/css/dark-theme.css
@@ -5133,7 +5133,11 @@ hr {
 .p-dialog .p-dialog-content {
   background: #1c1d26;
   color: #e6e6e6;
-  padding: 0 1.5rem 2rem 1.5rem;
+  padding: 0 1.5rem 1.5rem 1.5rem;
+}
+
+.p-dialog .p-dialog-content:has(+ .p-dialog-footer) {
+  padding-bottom: 2em;
 }
 
 .p-dialog .p-dialog-content:last-of-type {
