--- a/client/public/assets/css/light-theme-custom.css
+++ b/client/public/assets/css/light-theme-custom.css
@@ -4,14 +4,14 @@
   font-variation-settings: normal;
   --font-family:"Red Hat Text", sans-serif;
   --font-feature-settings: "cv02","cv03","cv04","cv11";
-  --surface-a:#ffffff;
-  --surface-b:#f9fafb;
-  --surface-c:#f3f4f6;
-  --surface-d:#e5e7eb;
+  --surface-a: #ffffff;
+  --surface-b: #eff3f8;
+  --surface-c: #f6f9fc;
+  --surface-d: var(--surface-border);
   --surface-e:#ffffff;
   --surface-f:#ffffff;
-  --text-color:#4b5563;
-  --text-color-secondary:#6b7280;
+  --text-color: #043d75;
+  --text-color-secondary: #708da9;
   --primary-color:#8B5CF6;
   --primary-color-text:#ffffff;
   --surface-0: #ffffff;
@@ -44,6 +44,7 @@
   --surface-overlay:#ffffff;
   --surface-border:#dfe7ef;
   --surface-hover:#f6f9fc;
+  --ground: #eff3f8;
   --focus-ring: 0 0 0 0.2rem #DDD6FE;
   --maskbg: rgba(0, 0, 0, 0.4);
   --highlight-bg: #F5F3FF;
@@ -51,124 +52,137 @@
 }
 
 :root {
-  --blue-50:#f5f9ff;
-  --blue-100:#d0e1fd;
-  --blue-200:#abc9fb;
-  --blue-300:#85b2f9;
-  --blue-400:#609af8;
-  --blue-500:#3b82f6;
-  --blue-600:#326fd1;
-  --blue-700:#295bac;
-  --blue-800:#204887;
-  --blue-900:#183462;
-  --green-50:#f4fcf7;
-  --green-100:#caf1d8;
-  --green-200:#a0e6ba;
-  --green-300:#76db9b;
-  --green-400:#4cd07d;
-  --green-500:#22c55e;
-  --green-600:#1da750;
-  --green-700:#188a42;
-  --green-800:#136c34;
-  --green-900:#0e4f26;
-  --yellow-50:#fefbf3;
-  --yellow-100:#faedc4;
-  --yellow-200:#f6de95;
-  --yellow-300:#f2d066;
-  --yellow-400:#eec137;
-  --yellow-500:#eab308;
-  --yellow-600:#c79807;
-  --yellow-700:#a47d06;
-  --yellow-800:#816204;
-  --yellow-900:#5e4803;
-  --cyan-50:#f3fbfd;
-  --cyan-100:#c3edf5;
-  --cyan-200:#94e0ed;
-  --cyan-300:#65d2e4;
-  --cyan-400:#35c4dc;
-  --cyan-500:#06b6d4;
-  --cyan-600:#059bb4;
-  --cyan-700:#047f94;
-  --cyan-800:#036475;
-  --cyan-900:#024955;
-  --pink-50:#fef6fa;
-  --pink-100:#fad3e7;
-  --pink-200:#f7b0d3;
-  --pink-300:#f38ec0;
-  --pink-400:#f06bac;
-  --pink-500:#ec4899;
-  --pink-600:#c93d82;
-  --pink-700:#a5326b;
-  --pink-800:#822854;
-  --pink-900:#5e1d3d;
-  --indigo-50:#f7f7fe;
-  --indigo-100:#dadafc;
-  --indigo-200:#bcbdf9;
-  --indigo-300:#9ea0f6;
-  --indigo-400:#8183f4;
-  --indigo-500:#6366f1;
-  --indigo-600:#5457cd;
-  --indigo-700:#4547a9;
-  --indigo-800:#363885;
-  --indigo-900:#282960;
-  --teal-50:#f3fbfb;
-  --teal-100:#c7eeea;
-  --teal-200:#9ae0d9;
-  --teal-300:#6dd3c8;
-  --teal-400:#41c5b7;
-  --teal-500:#14b8a6;
-  --teal-600:#119c8d;
-  --teal-700:#0e8174;
-  --teal-800:#0b655b;
-  --teal-900:#084a42;
-  --orange-50:#fff8f3;
-  --orange-100:#feddc7;
-  --orange-200:#fcc39b;
-  --orange-300:#fba86f;
-  --orange-400:#fa8e42;
-  --orange-500:#f97316;
-  --orange-600:#d46213;
-  --orange-700:#ae510f;
-  --orange-800:#893f0c;
-  --orange-900:#642e09;
-  --bluegray-50:#f7f8f9;
-  --bluegray-100:#dadee3;
-  --bluegray-200:#bcc3cd;
-  --bluegray-300:#9fa9b7;
-  --bluegray-400:#818ea1;
-  --bluegray-500:#64748b;
-  --bluegray-600:#556376;
-  --bluegray-700:#465161;
-  --bluegray-800:#37404c;
-  --bluegray-900:#282e38;
-  --purple-50:#fbf7ff;
-  --purple-100:#ead6fd;
-  --purple-200:#dab6fc;
-  --purple-300:#c996fa;
-  --purple-400:#b975f9;
-  --purple-500:#a855f7;
-  --purple-600:#8f48d2;
-  --purple-700:#763cad;
-  --purple-800:#5c2f88;
-  --purple-900:#432263;
-  --red-50:#fff5f5;
-  --red-100:#ffd0ce;
-  --red-200:#ffaca7;
-  --red-300:#ff8780;
-  --red-400:#ff6259;
-  --red-500:#ff3d32;
-  --red-600:#d9342b;
-  --red-700:#b32b23;
-  --red-800:#8c221c;
-  --red-900:#661814;
-  --primary-50:#f9f7ff;
-  --primary-100:#e3d8fd;
-  --primary-200:#cdb9fb;
-  --primary-300:#b79af9;
-  --primary-400:#a17bf8;
-  --primary-500:#8b5cf6;
-  --primary-600:#764ed1;
-  --primary-700:#6140ac;
-  --primary-800:#4c3387;
-  --primary-900:#382562;
+  --blue-600: #4796cf;
+  --blue-700: #3b7baa;
+  --blue-800: #2e6186;
+  --blue-900: #224661;
+  --green-50: #f4fcf8;
+  --green-100: #ccf2dc;
+  --green-200: #a3e7c1;
+  --green-300: #7adca6;
+  --green-400: #52d28a;
+  --green-500: #29c76f;
+  --green-600: #23a95e;
+  --green-700: #1d8b4e;
+  --green-800: #176d3d;
+  --green-900: #10502c;
+  --yellow-50: #fefdf6;
+  --yellow-100: #fcf4d6;
+  --yellow-200: #faebb5;
+  --yellow-300: #f8e295;
+  --yellow-400: #f5d974;
+  --yellow-500: #f3d054;
+  --yellow-600: #cfb147;
+  --yellow-700: #aa923b;
+  --yellow-800: #86722e;
+  --yellow-900: #615322;
+  --cyan-50: #f5fcfd;
+  --cyan-100: #d1f2f5;
+  --cyan-200: #ace8ed;
+  --cyan-300: #87dee6;
+  --cyan-400: #63d3de;
+  --cyan-500: #3ec9d6;
+  --cyan-600: #35abb6;
+  --cyan-700: #2b8d96;
+  --cyan-800: #226f76;
+  --cyan-900: #195056;
+  --pink-50: #fef6f7;
+  --pink-100: #fad6d6;
+  --pink-200: #f6b5b6;
+  --pink-300: #f29596;
+  --pink-400: #ee7475;
+  --pink-500: #ea5455;
+  --pink-600: #c74748;
+  --pink-700: #a43b3c;
+  --pink-800: #812e2f;
+  --pink-900: #5e2222;
+  --indigo-50: #f6f7fe;
+  --indigo-100: #d6dafc;
+  --indigo-200: #b5bcfa;
+  --indigo-300: #959ff8;
+  --indigo-400: #7481f5;
+  --indigo-500: #5464f3;
+  --indigo-600: #4755cf;
+  --indigo-700: #3b46aa;
+  --indigo-800: #2e3786;
+  --indigo-900: #222861;
+  --teal-50: #f3fcf9;
+  --teal-100: #c5f1e1;
+  --teal-200: #97e5c9;
+  --teal-300: #69dab1;
+  --teal-400: #3bce99;
+  --teal-500: #0dc381;
+  --teal-600: #0ba66e;
+  --teal-700: #09895a;
+  --teal-800: #076b47;
+  --teal-900: #054e34;
+  --orange-50: #fffaf6;
+  --orange-100: #ffe8d2;
+  --orange-200: #ffd6ae;
+  --orange-300: #ffc38a;
+  --orange-400: #ffb166;
+  --orange-500: #ff9f42;
+  --orange-600: #d98738;
+  --orange-700: #b36f2e;
+  --orange-800: #8c5724;
+  --orange-900: #66401a;
+  --bluegray-50: #f7f8fa;
+  --bluegray-100: #dbdfe8;
+  --bluegray-200: #bec5d6;
+  --bluegray-300: #a1abc4;
+  --bluegray-400: #8592b2;
+  --bluegray-500: #6878a0;
+  --bluegray-600: #586688;
+  --bluegray-700: #495470;
+  --bluegray-800: #394258;
+  --bluegray-900: #2a3040;
+  --purple-50: #f8f6fe;
+  --purple-100: #ddd6fc;
+  --purple-200: #c2b5fa;
+  --purple-300: #a895f8;
+  --purple-400: #8d74f5;
+  --purple-500: #7254f3;
+  --purple-600: #6147cf;
+  --purple-700: #503baa;
+  --purple-800: #3f2e86;
+  --purple-900: #2e2261;
+  --red-50: #fff5f6;
+  --red-100: #ffcfd4;
+  --red-200: #ffa9b2;
+  --red-300: #ff848f;
+  --red-400: #ff5e6d;
+  --red-500: #ff384b;
+  --red-600: #d93040;
+  --red-700: #b32735;
+  --red-800: #8c1f29;
+  --red-900: #66161e;
+  --primary-50: #f9f7fd;
+  --primary-100: #e0dbf7;
+  --primary-200: #c7bef1;
+  --primary-300: #aea1eb;
+  --primary-400: #9685e5;
+  --primary-500: #7d68df;
+  --primary-600: #6a58be;
+  --primary-700: #58499c;
+  --primary-800: #45397b;
+  --primary-900: #322a59;
+}
+
+hr {
+  border: 0;
+  border-top: 1px solid var(--surface-border)
+}
+
+.ground {
+  background-color: var(--ground);
+  color: var(--text-color)
+}
+
+*[style*="border-radius: 6px"] {
+  border: 1px solid red !important;
+  /* Styles spécifiques pour les éléments avec border-radius égal à 6px */
+}
+
+.p-card {
+  box-shadow: none;
 }
